style: fix gap

--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ main {
 /* nav primary list */
 
 #nav-primary > ul {
-    gap: 20px 12px;
+    gap: 12px;
 }
 
 
